--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 
 <div class="main" style="border-radius:30px;">
-<div class="container">
+<div class="container cont">
 <div class="row">
   <div class="col-md-12 bg-dark kyc">
 		  <h3 class="text-center heading text-white p-1">My Profile</h3>
@@ -89,7 +89,7 @@
               <div class="col-md-12">
 			  <div class="flx1">
 			   <label>Full Name</label> 
-                <input  name="textinput" type="text" placeholder="" class="form-control">
+                <input  name="textinput" type="text" placeholder="" class="form-control" id="fname">
             </div>
 
 
@@ -134,7 +134,7 @@
             <fieldset>
 
             <!-- Form Name -->
-            <legend>Contact Details</legend>
+            <legend class="contact-detail">Contact Details</legend>
             <!-- Select Basic -->
       
              
