--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
              
               <div class="col-md-12">
 			  <div class="flx6">
-			   <label>Mobile No</label> 
+			   <label>Mobile</label> 
                 <input type="number" placeholder="7014154675" class="form-control" id="mob"> <button class="bt" id="bts">Send OTP</button><input type="number" placeholder="566213" class="form-control" id="for"><button class="bt" id="bts2">Verify</button>
             </div>
 			
