--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </div>
 
  <div class="last-btn">
-<button class="bt" id="my-btn3">Save &nbsp; <img src="images/01-09.png" width="18"></button>
+<button class="bt" id="my-btn3">Save</button>
 </div>
 		</div>
 		<!-- End .company-info -->
