--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 			    
 			 <div class="flx4">
 				<label>Date Of Birth</label>
-  	<input id="textinput"  type="date" placeholder="" class="form-control">
+  	<input id="textinput"  type="date" placeholder="dd-mm-yyyy" class="form-control">
 </div>
   
  <div class="flx5">
