--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ if (window.matchMedia('(max-width: 600px)').matches)
 {
  $(document).ready(function(){
   $("#bts2").click(function(){
-   $(".flx7").css("margin-top", "-117px");
+   $(".flx7").css("margin-top", "-120px");
   });
  
 });
@@ -333,7 +333,7 @@ if (window.matchMedia('(max-width: 600px)').matches)
 </script>
 
 <script>
-if (window.matchMedia('(min-width: 750px)').matches)
+if (window.matchMedia('(min-width: 700px)and (max-width: 835px)').matches)
 {
  $(document).ready(function(){
   $("#bts2").click(function(){
